# graphql

./: .gitignore  CMakeLists.txt  LICENSE.rst  README.rst
cmake/: PackagingConfig.cmake
cmake/modules/: AddSphinxTarget.cmake
documentation/: CMakeLists.txt
documentation/user-manual/: CMakeLists.txt  conf.py  index.rst
include/graphql/: types.h
src/: CMakeLists.txt  schema.c  types.c
