PROJECT(graphql C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

# Enable Mac OS X @rpath handling
CMAKE_POLICY(SET CMP0042 NEW)

# This needs to be in the root CMakeLists.txt.
ENABLE_TESTING()

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")

OPTION(GRAPHQL_BUILD_DOCS "Build the GraphQL documentation." OFF)

# clang doesn't print colored diagnostics when invoked from Ninja
IF(UNIX AND
   CMAKE_C_COMPILER_ID STREQUAL "Clang" AND
   CMAKE_GENERATOR STREQUAL "Ninja")
  SET(CMAKE_C_FLAGS "-fcolor-diagnostics ${CMAKE_C_FLAGS}")
ENDIF()

SET(GRAPHQL_VERSION_MAJOR 0)
SET(GRAPHQL_VERSION_MINOR 1)
SET(GRAPHQL_VERSION_PATCH 0)
SET(GRAPHQL_VERSION "${GRAPHQL_VERSION_MAJOR}.${GRAPHQL_VERSION_MINOR}.${GRAPHQL_VERSION_PATCH}")

SET(GRAPHQL_LIB_DIR "lib/dylan/${GRAPHQL_VERSION}/${GRAPHQL_TARGET_PLATFORM}")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)

IF(GRAPHQL_BUILD_DOCS)
  ADD_SUBDIRECTORY(documentation)
ENDIF()

INCLUDE(${CMAKE_SOURCE_DIR}/cmake/PackagingConfig.cmake)
